minor ui tweeks

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -44,7 +44,7 @@
       <li><a href="http://babasse.deviantart.com/art/Old-School-79460710">Old School</a> icons from babaasse</li>
       <li><a href="http://ztreasureisle.wikia.com/wiki/File:JudgeItems_Gavel-icon.png">Judge</a> icon from <a href="http://ztreasureisle.wikia.com/wiki/User:Henriquegr">Henriquegr</a></li>
       <li><a href="http://pixelpressicons.com/index_old.html">Ship</a> icon from <a href="http://www.pixelpressicons.com/">PixelPressIcons</a></li>
-      <li>Lock icon from <a href="http://www.iconshock.com/">IconShock</a></li>
+      <li>Hourglass icon from <a href="http://www.icons-land.com/">Icons Land</a></li>
       <li>Small icons from <a href="http://www.customicondesign.com/">Custom Icon Design</a>, <a href="http://p.yusukekamiyamane.com/">p.yusukekamiyamane</a>, <a href="http://led24.de/iconset/">led24</a> and
       <a href="http://www.iconshock.com/">Icon Stock</a></li>
     </ul>
