--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,7 @@
           
           <div id="navigation" class="two-of-two">
                       <ul class="header-nav">
-              <li class="first"><a href="/" title="Home">Home</a></li>
-              <li><a href="/convicts" title="Convicts">Convicts</a></li>
+              <li class="first"><a href="/convicts" title="Convicts">Convicts</a></li>
               <li><a href="/data/boats" title="Boats">Boats</a></li>
               <li><a href="/data/destinations" title="Destinations">Dest</a></li>
               <li><a href="/data/departure_dates" title="Departure Dates">Dates</a></li>
