try to improve the layout of the home page

--- a/app/views/data/_conviction_locations_map.html.erb
+++ b/app/views/data/_conviction_locations_map.html.erb
@@ -1,6 +1,6 @@
   <div id="counties-map-container" class="widget">
     <h3 class="widget-section-title widget-title-map-icon">Conviction Locations Map</h3>
-    <div id="map_canvas" style="width: 320px; height: 450px">Loading ...</div> 
+    <div id="map_canvas" style="width: <%= width ||= 320 %>px; height: 450px">Loading ...</div> 
   </div>
 
 <script>
