--- a/app/views/home/_overview_text.html.erb
+++ b/app/views/home/_overview_text.html.erb
@@ -1,4 +1,4 @@
 The transportation of convicts was an important part of the European settlement of Australia, and is now considered a popular and cultural defining moment of modern Australian history.  
 But <strong>who were the convicts?</strong> Where did they come from and how did they get here?   Thanks to the <a href="http://www.slq.qld.gov.au/info/fh/convicts">British Convict Transportation Registry</a> we
-can start to answer these questions.  However, the registry contains the names of over 123,000 convicts which mades it very difficult to digest as raw data.  ConViz is an attempt to visualise this
+can start to answer these questions.  The registry contains the names of over 123,000 convicts which made it very difficult to digest as raw data.  ConViz is an attempt to visualise this
 data so that the stories and patterns within, are available for people to see and understand.
