fix last name column header

--- a/app/views/data/names.html.erb
+++ b/app/views/data/names.html.erb
@@ -88,7 +88,7 @@
             var tableData = <%= raw @last_names.to_json %>;
 
             var columnDefs = [
-                {key:"last_name", label: "First Name", sortable:true, resizeable:true},
+                {key:"last_name", label: "Last Name", sortable:true, resizeable:true},
                 {key:"convicts", label: "Convicts", formatter: "number", sortable:true, resizeable:true}
             ];
      
