small ui tweeks

--- a/app/views/data/court_counties.html.erb
+++ b/app/views/data/court_counties.html.erb
@@ -87,6 +87,8 @@ $(document).ready(function() {
 
   <div id="courty-table-container" class="widget">
     <h3 class="widget-section-title widget-title-table-icon">Browse By Conviction County</h3>
+    <p id="county-data-quality"><strong>Note:</strong> Counties of conviction have been determined based on each convict's court of conviction.
+    This is far from fool proof, and some locations (e.g. Ireland) have disproportionately low stats.</p>
     <div id="data-table">Loading ...</div>
   </div>
 
