--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -103,7 +103,7 @@
                 </div>
         
         <div id="footer-right" class="two-of-two">
-                  <p>Developed by <a href="http://o-sam-o.github.com/">Sam Cavenagh</a></p>
+                  <p>Developed by <a href="http://o-sam-o.github.com/">Sam Cavenagh</a> | <a href="/home/about" title="About">About</a></p>
                 </div>
       </footer> <!-- footer .row -->
     </div> <!-- .section -->
