fix errors from google webmaster

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -52,7 +52,7 @@
 
   <div class="widget about-container">
     <h3 class="widget-section-title widget-title-text-icon">Contact Us</h3>
-    If you have any comments or questions regarding this site feel free to contact me at <a href="cavenaghweb@hotmail.com">cavenaghweb@hotmail.com</a>
+    If you have any comments or questions regarding this site feel free to contact me at <a href="mailto:cavenaghweb@hotmail.com">cavenaghweb@hotmail.com</a>
   </div>
 
 </div>
