--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,9 @@
 <% content_for :head do %>
-  <%= javascript_include_tag 'highcharts' %>
-
   <script type='text/javascript' src='https://www.google.com/jsapi'></script>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
-  <%= javascript_include_tag 'protovis-r3.2' %>
+  <%= javascript_include_tag 'protovis-r3.2.js' %>
+  <%= javascript_include_tag 'highcharts.js' %>
 <% end %>
 
 
