--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,11 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="chrome=IE8">
   <title><%= content_for?(:title) ? (yield :title) : 'ConViz - Convict Record Visualisation' %></title>
+
+  <%= stylesheet_link_tag    "application" %>
+  <%= javascript_include_tag "application" %>
+
   <%= stylesheet_link_tag 'theme/style.css' %>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag 'theme/modernizr.min.js' %>
   <%= javascript_include_tag 'theme/tooltip.jquery.js' %>
 
