change to use scss image helper

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -68,22 +68,22 @@
 }
 
 .widget-title-graph-icon {
-  background: url(images/graph_icon_16.png) left no-repeat; 
+  background: image_url('images/graph_icon_16.png') left no-repeat; 
   background-size: 16px;
 }
 
 .widget-title-table-icon {
-  background: url(images/table_icon_16.png) left no-repeat; 
+  background: image_url('images/table_icon_16.png') left no-repeat; 
   background-size: 16px;  
 }
 
 .widget-title-map-icon {
-  background: url(images/map_icon_16.png) left no-repeat; 
+  background: image_url('images/map_icon_16.png') left no-repeat; 
   background-size: 16px;  
 }
 
 .widget-title-text-icon {
-  background: url(images/text_icon_16.png) left no-repeat; 
+  background: image_url('images/text_icon_16.png') left no-repeat; 
   background-size: 16px;  
 }
 
@@ -241,7 +241,7 @@ p.notes {
 .action-button {
 	text-shadow: 0 1px 0 #fff;
   font-weight: bold;
-	background: #eef0f2 url(images/feature-li-bg.png) repeat-x bottom left;
+	background: #eef0f2 image_url('images/feature-li-bg.png') repeat-x bottom left;
 	border: 1px solid #aaa;
 	-moz-border-radius: 16px;
 	-webkit-border-radius: 16px;
@@ -251,7 +251,7 @@ p.notes {
 
 .action-button:hover {
 	border: 1px solid #c9c9c9;
-	background: #f3f5f7 url(images/feature-li-bg-hover.png) repeat-x bottom left;
+	background: #f3f5f7 image_url('images/feature-li-bg-hover.png') repeat-x bottom left;
 }
 
 #home-intro-text {
@@ -273,31 +273,31 @@ p.notes {
 }
 
 #search-convicts-link {
-  background: url(images/convicts_100.png) top center no-repeat; 
+  background: image_url('images/convicts_100.png') top center no-repeat; 
 }
 
 #departure-dates-link{
-  background: url(images/departure_dates_100.png) top center no-repeat; 
+  background: image_url('images/departure_dates_100.png') top center no-repeat; 
 }
 
 #boats-link {
-  background: url(images/boats_100.jpg) top center no-repeat; 
+  background: image_url('images/boats_100.jpg') top center no-repeat; 
 }
 
 #court-counties-link {
-  background: url(images/conviction_counties_100.png) top center no-repeat; 
+  background: image_url('images/conviction_counties_100.png') top center no-repeat; 
 }
 
 #destinations-link {
-  background: url(images/destinations_100.png) top center no-repeat; 
+  background: image_url('images/destinations_100.png') top center no-repeat; 
 }
 
 #terms-link {
-  background: url(images/terms_100.png) top center no-repeat; 
+  background: image_url('images/terms_100.png') top center no-repeat; 
 }
 
 #names-link {
-  background: url(images/names_100.png) top center no-repeat; 
+  background: image_url('images/names_100.png') top center no-repeat;
 }
 
 .about-container {
