A basic yui table coffee script class

--- a/app/views/convicts/index.html.erb
+++ b/app/views/convicts/index.html.erb
@@ -25,8 +25,7 @@
 
   <div id="convicts-table">Loading ...</div>
 
-  <script>
-
+  <script2>
     YAHOO.util.Event.addListener(window, "load", function() {
             var columnDefs = [
                 {key:"name", label: "Name", sortable:true, resizeable:true},
@@ -86,7 +85,7 @@
             };
     });
 
-  </script>
+  </script2>
 
   <%= will_paginate @convicts %>
 
