--- a/app/views/data/boats.html.erb
+++ b/app/views/data/boats.html.erb
@@ -1,5 +1,7 @@
 <% content_for :head do %>
   <%= javascript_include_tag 'highcharts' %>
+  <%= javascript_include_tag 'protovis-r3.2' %>
+  <%= javascript_include_tag "data/boats.js" %>
 
   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.9.0/build/datatable/assets/skins/sam/datatable.css" /> 
   <script type="text/javascript" src="http://yui.yahooapis.com/2.9.0/build/json/json-min.js"></script> 
@@ -7,15 +9,11 @@
   <script type="text/javascript" src="http://yui.yahooapis.com/2.9.0/build/datasource/datasource-min.js"></script> 
   <script type="text/javascript" src="http://yui.yahooapis.com/2.9.0/build/event-delegate/event-delegate-min.js"></script> 
   <script type="text/javascript" src="http://yui.yahooapis.com/2.9.0/build/datatable/datatable-min.js"></script>
-
-  <%= javascript_include_tag 'protovis-r3.2' %>
 <% end %>
 
 <% content_for :page_header do %>
   <h2 class="page-title">Convict Boats</h2>
 <% end %>
-
-<% unless @boats.empty? %>
 
   <div class="graphs-container">
     <div id="top-boats-graph-container" class="widget">
@@ -93,44 +91,24 @@ $(document).ready(function() {
     <div id="data-table">Loading ...</div>
   </div>
 
-  <script>
-    YAHOO.util.Event.addListener(window, "load", function() {
-            var tableData = <%= raw @boats.to_json %>;
+  <table id="raw-boats-table" class="raw-yui-table">
+    <thead>
+      <tr>
+        <th>link</th>
+        <th>boat</th>
+        <th>convicts</th>
+        <th>voyage_count</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @boats.each do |boat| %>
+        <tr>
+          <td><%= link_to boat[:boat], convicts_path(:boat => boat[:boat]) %></td>
+          <td><%= boat[:boat] %></td>
+          <td><%= boat[:convicts] %></td>
+          <td><%= boat[:voyage_count] %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-            var columnDefs = [
-                {key:"boat", label: "Boat", sortable:true, resizeable:true},
-                {key:"convicts", label: "Convicts", formatter: "number", sortable:true, resizeable:true},
-                {key:"voyage_count", label: "Voyages", formatter: "number", sortable:true, resizeable:true}
-            ];
-     
-            var tableDS = new YAHOO.util.DataSource(tableData);
-            tableDS.responseType = YAHOO.util.DataSource.TYPE_JSARRAY;
-            tableDS.responseSchema = {
-                fields: ["boat", "convicts", "voyage_count"]
-            };
-
-            var dataTable = new YAHOO.widget.DataTable("data-table",
-              columnDefs, tableDS, {sortedBy : {key:"boat", dir: 'desc'}});
-
-            //Hightlight row on mouse hover
-            dataTable.subscribe("rowMouseoverEvent", dataTable.onEventHighlightRow);
-            dataTable.subscribe("rowMouseoutEvent", dataTable.onEventUnhighlightRow);
-
-            //Handle user clicking on a row
-            dataTable.subscribe("rowClickEvent", function(oArgs){
-              var elTarget = oArgs.target;
-              var oRecord = this.getRecord(elTarget);
-              window.location.href = '/convicts/?boat=' + oRecord.getData("boat");
-            }); 
-
-            return {
-                oDS: tableDS,
-                oDT: dataTable
-            };
-    });
-
-  </script>
-
-<% else %>
-  <p>No boats</p>
-<% end %>
