--- a/app/views/data/terms.html.erb
+++ b/app/views/data/terms.html.erb
@@ -1,5 +1,6 @@
 <% content_for :head do %>
   <%= javascript_include_tag 'highcharts' %>
+  <%= javascript_include_tag "data/terms.js" %>
 
   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.9.0/build/datatable/assets/skins/sam/datatable.css" /> 
   <script type="text/javascript" src="http://yui.yahooapis.com/2.9.0/build/json/json-min.js"></script> 
@@ -18,43 +19,25 @@
   <div id="term-table-container" class="widget">
     <h3 class="widget-section-title widget-title-table-icon">Browse By Sentence</h3>
     <div id="data-table">Loading ...</div>
+    <table id="raw-terms-table" class="raw-yui-table">
+      <thead>
+        <tr>
+          <th>link</th>
+          <th>term</th>
+          <th>convicts</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @terms.each do |term| %>
+          <tr>
+            <td><%= link_to term[:term], convicts_path(:term => term[:term]) %></td>
+            <td><%= term[:term] %></td>
+            <td><%= term[:convicts] %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
-
-  <script>
-    YAHOO.util.Event.addListener(window, "load", function() {
-            var tableData = <%= raw @terms.to_json %>;
-
-            var columnDefs = [
-                {key:"term", label: "Sentence", sortable:true, resizeable:true},
-                {key:"convicts", label: "Convicts", formatter: "number", sortable:true, resizeable:true}
-            ];
-     
-            var tableDS = new YAHOO.util.DataSource(tableData);
-            tableDS.responseType = YAHOO.util.DataSource.TYPE_JSARRAY;
-            tableDS.responseSchema = {
-                fields: ["term", "convicts"]
-            };
-
-            var dataTable = new YAHOO.widget.DataTable("data-table",
-              columnDefs, tableDS, {sortedBy : {key:"convicts", dir: 'desc'}});
-
-            //Hightlight row on mouse hover
-            dataTable.subscribe("rowMouseoverEvent", dataTable.onEventHighlightRow);
-            dataTable.subscribe("rowMouseoutEvent", dataTable.onEventUnhighlightRow);
-
-            //Handle user clicking on a row
-            dataTable.subscribe("rowClickEvent", function(oArgs){
-              var elTarget = oArgs.target;
-              var oRecord = this.getRecord(elTarget);
-              window.location.href = '/convicts/?term=' + oRecord.getData("term");
-            }); 
-
-            return {
-                oDS: tableDS,
-                oDT: dataTable
-            };
-    });
-  </script>
 
   <%= render :partial => '/data/term_pie' %>
 
