--- a/app/views/data/names.html.erb
+++ b/app/views/data/names.html.erb
@@ -1,5 +1,6 @@
 <% content_for :head do %>
   <%= javascript_include_tag 'highcharts' %>
+  <%= javascript_include_tag "data/names.js" %>
 
   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.9.0/build/datatable/assets/skins/sam/datatable.css" /> 
   <script type="text/javascript" src="http://yui.yahooapis.com/2.9.0/build/json/json-min.js"></script> 
@@ -29,43 +30,25 @@
   <div id="first-names-table-container" class="widget">
     <h3 class="widget-section-title widget-title-table-icon">Browse Top 50 First Names</h3>
     <div id="first-name-data-table">Loading ...</div>
+    <table id="raw-first-names-table" class="raw-yui-table">
+      <thead>
+        <tr>
+          <th>link</th>
+          <th>first_name</th>
+          <th>convicts</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @first_names.each do |first_name| %>
+          <tr>
+            <td><%= link_to first_name[:first_name], convicts_path(:first_name => first_name[:first_name]) %></td>
+            <td><%= first_name[:first_name] %></td>
+            <td><%= first_name[:convicts] %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>    
   </div>
-
-  <script>
-    YAHOO.util.Event.addListener(window, "load", function() {
-            var tableData = <%= raw @first_names.to_json %>;
-
-            var columnDefs = [
-                {key:"first_name", label: "First Name", sortable:true, resizeable:true},
-                {key:"convicts", label: "Convicts", formatter: "number", sortable:true, resizeable:true}
-            ];
-     
-            var tableDS = new YAHOO.util.DataSource(tableData);
-            tableDS.responseType = YAHOO.util.DataSource.TYPE_JSARRAY;
-            tableDS.responseSchema = {
-                fields: ["first_name", "convicts"]
-            };
-
-            var dataTable = new YAHOO.widget.DataTable("first-name-data-table",
-              columnDefs, tableDS, {sortedBy : {key:"convicts", dir: 'desc'}});
-
-            //Hightlight row on mouse hover
-            dataTable.subscribe("rowMouseoverEvent", dataTable.onEventHighlightRow);
-            dataTable.subscribe("rowMouseoutEvent", dataTable.onEventUnhighlightRow);
-
-            //Handle user clicking on a row
-            dataTable.subscribe("rowClickEvent", function(oArgs){
-              var elTarget = oArgs.target;
-              var oRecord = this.getRecord(elTarget);
-              window.location.href = '/convicts/?first_name=' + oRecord.getData("first_name");
-            }); 
-
-            return {
-                oDS: tableDS,
-                oDT: dataTable
-            };
-    });
-  </script>
 
   <div id="last-names-search-container" class="widget">
     <h3 class="widget-section-title widget-title-text-icon">Search by Last Name</h3>
@@ -81,44 +64,25 @@
   <div id="last-names-table-container" class="widget">
     <h3 class="widget-section-title widget-title-table-icon">Browse Top 50 Last Names</h3>
     <div id="last-name-data-table">Loading ...</div>
+    <table id="raw-last-names-table" class="raw-yui-table">
+      <thead>
+        <tr>
+          <th>link</th>
+          <th>last_name</th>
+          <th>convicts</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @last_names.each do |last_name| %>
+          <tr>
+            <td><%= link_to last_name[:last_name], convicts_path(:last_name => last_name[:last_name]) %></td>
+            <td><%= last_name[:last_name] %></td>
+            <td><%= last_name[:convicts] %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
-
-  <script>
-    YAHOO.util.Event.addListener(window, "load", function() {
-            var tableData = <%= raw @last_names.to_json %>;
-
-            var columnDefs = [
-                {key:"last_name", label: "Last Name", sortable:true, resizeable:true},
-                {key:"convicts", label: "Convicts", formatter: "number", sortable:true, resizeable:true}
-            ];
-     
-            var tableDS = new YAHOO.util.DataSource(tableData);
-            tableDS.responseType = YAHOO.util.DataSource.TYPE_JSARRAY;
-            tableDS.responseSchema = {
-                fields: ["last_name", "convicts"]
-            };
-
-            var dataTable = new YAHOO.widget.DataTable("last-name-data-table",
-              columnDefs, tableDS, {sortedBy : {key:"convicts", dir: 'desc'}});
-
-            //Hightlight row on mouse hover
-            dataTable.subscribe("rowMouseoverEvent", dataTable.onEventHighlightRow);
-            dataTable.subscribe("rowMouseoutEvent", dataTable.onEventUnhighlightRow);
-
-            //Handle user clicking on a row
-            dataTable.subscribe("rowClickEvent", function(oArgs){
-              var elTarget = oArgs.target;
-              var oRecord = this.getRecord(elTarget);
-              window.location.href = '/convicts/?last_name=' + oRecord.getData("last_name");
-            }); 
-
-            return {
-                oDS: tableDS,
-                oDT: dataTable
-            };
-    });
-  </script>
-
 
     <div id="first-names-graph-container" class="widget">
       <h3 class="widget-section-title widget-title-graph-icon">Top First Names</h3>
