Clean up assets so only need one css and js file in prod app

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,3 +1,8 @@
+@import 'theme/css/reset'
+@import 'theme/css/base'
+@import 'theme/style'
+@import 'theme/css/media'
+
 #convict-search-form label
   color: #CCC
 
