--- a/app/assets/stylesheets/theme/style.css.scss
+++ b/app/assets/stylesheets/theme/style.css.scss
@@ -28,22 +28,11 @@ Be inspired, but please don't steal :)
 **********************************************************************************************/
 
 
-
-
-/* 0. Import Resets and Base Styles (DO NOT EDIT)
-**********************************************************************************************/
-
-@import url(css/reset.css);
-@import url(css/base.css);
-
-
-
-
 /* 1. Universal Content Containers
 **********************************************************************************************/
 
 #main {
-background: url(images/main-bg.png) top left no-repeat;
+background: image_url('theme/images/main-bg.png') top left no-repeat;
 border-bottom: 1px solid #EEEEEE;
 padding: 15px 0 15px 0;
 }
@@ -80,7 +69,7 @@ float: left;
 **********************************************************************************************/
 
 #header {
-background: #211F1D url(images/header-bg.png) top left repeat-x;
+background: #211F1D image_url('theme/images/header-bg.png') top left repeat-x;
 height: 150px;
 }
 
@@ -132,7 +121,7 @@ color: #CCCCCC;
 }
 
 #rotator img {
-background: url(images/rotator-bg.png) top repeat;
+background: image_url('theme/images/rotator-bg.png') top repeat;
 float: right;
 padding: 15px;
 }
@@ -150,7 +139,7 @@ padding: 2px 0 2px 23px;
 }
 
 .widget_text {
-background: url(images/texthatch.png) top left repeat;
+background: image_url('theme/images/texthatch.png') top left repeat;
 width: 930px;
 float: left;
 padding: 15px;
@@ -215,7 +204,7 @@ box-shadow: 0px 0px 2px #000000;
 **********************************************************************************************/
 
 h2.page-title {
-background: url(images/texthatch.png) top left repeat;
+background: image_url('theme/images/texthatch.png') top left repeat;
 font-family: 'Neuton', arial, serif;
 font-size: 25px;
 width: 930px;
@@ -287,20 +276,12 @@ text-align: right;
 }
 
 a.twitter-link {
-background: url(images/twitter.png) 0 0 no-repeat;
+background: image_url('theme/images/twitter.png') 0 0 no-repeat;
 padding: 0 0 0 24px;
 }
 
 a.twitter-link:hover {
 background-position: 0 -26px;
 }
-
-
-
-/* 6. Import Media Styles
-**********************************************************************************************/
-
-@import url(css/media.css);
-
 
 
