--- a/app/views/data/departure_dates.html.erb
+++ b/app/views/data/departure_dates.html.erb
@@ -9,6 +9,10 @@
 
 <% end %>
 
+<% content_for :title do %>
+  Convict Departure Dates
+<% end %>
+
 <% content_for :page_header do %>
   <h2 class="page-title">Departure Date</h2>
 <% end %>
