--- a/app/views/data/destinations.html.erb
+++ b/app/views/data/destinations.html.erb
@@ -10,6 +10,10 @@
   <script type='text/javascript' src='https://www.google.com/jsapi'></script>
 <% end %>
 
+<% content_for :title do %>
+  Convict Destinations
+<% end %>
+
 <% content_for :page_header do %>
   <h2 class="page-title">Convict Destinations</h2>
 <% end %>
