--- a/app/views/convicts/show.html.erb
+++ b/app/views/convicts/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  Convict: <%= @convict.name %>
+<% end %>
+
 <% content_for :page_header do %>
   <h2 class="page-title">
     <%= @convict.name %>
