--- a/app/views/convicts/show.html.erb
+++ b/app/views/convicts/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <link rel="canonical" href="/convicts/<%= @convict.id %>/<%= @convict.name.parameterize %>" />
+<% end %>
+
 <% content_for :title do %>
   Convict: <%= @convict.name %>
 <% end %>
