--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <link href='http://fonts.googleapis.com/css?family=Neuton' rel='stylesheet' type='text/css'> 
 
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "protovis-r3.2" %>
 
   <script src="http://yui.yahooapis.com/2.9.0/build/yahoo-dom-event/yahoo-dom-event.js"></script>
   <script src="http://yui.yahooapis.com/2.9.0/build/logger/logger-min.js"></script>
