--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,14 @@
 <% content_for :head do %>
   <script type='text/javascript' src='https://www.google.com/jsapi'></script>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <link rel="canonical" href="http://conviz.info" />
 <% end %>
 
 
 <% content_for :page_header do %>
-  <div id="text-3" class="widget widget_text">			
+  <div id="text-3" class="widget widget_text">
     <div id="home-intro-text" class="textwidget">
-      <%= render :partial => 'overview_text' %> 
+      <%= render :partial => 'overview_text' %>
     </div>
 	</div>
 <% end %>
