add destination and conviction county map to show convict page

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -321,5 +321,17 @@ p.notes
   top: 530px
   width: 460px
 
+#show-convict-page-container
+  position: relative
+  min-height: 530px
+
+#show-convict-maps
+  position: absolute
+  right: 30px
+  top: 80px
+
+.show-convict-map-container
+  margin-bottom: 10px
+
 .yui-dt a
   text-decoration: none
