--- a/app/views/convicts/show.html.erb
+++ b/app/views/convicts/show.html.erb
@@ -1,4 +1,5 @@
 <% content_for :head do %>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
   <link rel="canonical" href="/convicts/<%= @convict.id %>/<%= @convict.name.parameterize %>" />
 <% end %>
 
@@ -12,24 +13,34 @@
   </h2>
 <% end %>
 
-<div class="page-content" style="width: 600px;">
-  <h3>About</h3>
-  <p><%= @convict.description %>. <%= @convict.court_and_term %> Transported to <%= @convict.raw_destination %>.</p>
+<div id="show-convict-page-container">
+  <div class="page-content" style="width: 600px;">
+    <h3>About</h3>
+    <p><%= @convict.description %>. <%= @convict.court_and_term %> Transported to <%= @convict.raw_destination %>.</p>
 
-  <h3>Other Information</h3>
-  <p>
-  <% unless @convict.alias_name.blank? %>
-    <strong>Alias:</strong> <%= @convict.alias_name %><br/>
-  <% end %>  
-  <strong>Boat:</strong> <%= @convict.boat.blank? ? 'Unknown' : link_to(@convict.boat, convicts_path(:boat =>  @convict.boat)) %><br/>
-  <strong>Departed:</strong> <%= @convict.departure_date.blank? ? 'Unknown' : link_to(@convict.departure_date.strftime("#{@convict.departure_date.day.ordinalize} %B %Y"), convicts_path(:departure_year =>  @convict.departure_year)) %><br/>
-  <strong>Destination:</strong> <%= @convict.destination.blank? ? 'Unknown' : link_to(@convict.destination, convicts_path(:destination =>  @convict.destination)) %><%= ", #{@convict.destination_state}" unless @convict.destination_state.nil? %><br/>
-  <strong>Court:</strong> <%= @convict.court %> <% unless @convict.court_county.blank? %> in <%= link_to @convict.court_county, convicts_path(:court_county =>  @convict.court_county) %> <% end %><br/>
-  <strong>Sentence:</strong> <%= link_to(humanize_term(@convict.term), convicts_path(:term =>  @convict.term)) %>
-  </p>
+    <h3>Other Information</h3>
+    <p>
+    <% unless @convict.alias_name.blank? %>
+      <strong>Alias:</strong> <%= @convict.alias_name %><br/>
+    <% end %>  
+    <strong>Boat:</strong> <%= @convict.boat.blank? ? 'Unknown' : link_to(@convict.boat, convicts_path(:boat =>  @convict.boat)) %><br/>
+    <strong>Departed:</strong> <%= @convict.departure_date.blank? ? 'Unknown' : link_to(@convict.departure_date.strftime("#{@convict.departure_date.day.ordinalize} %B %Y"), convicts_path(:departure_year =>  @convict.departure_year)) %><br/>
+    <strong>Destination:</strong> <%= @convict.destination.blank? ? 'Unknown' : link_to(@convict.destination, convicts_path(:destination =>  @convict.destination)) %><%= ", #{@convict.destination_state}" unless @convict.destination_state.nil? %><br/>
+    <strong>Court:</strong> <%= @convict.court %> <% unless @convict.court_county.blank? %> in <%= link_to @convict.court_county, convicts_path(:court_county =>  @convict.court_county) %> <% end %><br/>
+    <strong>Sentence:</strong> <%= link_to(humanize_term(@convict.term), convicts_path(:term =>  @convict.term)) %>
+    </p>
 
-  <h3>Boring Stuff</h3>
-  <p>
-    <%= @convict.source %>: <%= @convict.copyright %>.
-  </p>
+    <h3>Boring Stuff</h3>
+    <p>
+      <%= @convict.source %>: <%= @convict.copyright %>.
+    </p>
+  </div>
+  <div id="show-convict-maps">
+    <% unless @convict.court_county.blank? %>
+      <%= render :partial => 'convict_map', :locals => { :title => 'Conviction Location', :lat => @convict.county.latitude, :lng => @convict.county.longitude, :tooltip => @convict.court_county } %>
+    <% end %>
+    <% unless @convict.destination_details.blank? %>
+      <%= render :partial => 'convict_map', :locals => { :title => 'Destination', :lat => @convict.destination_details.latitude, :lng => @convict.destination_details.longitude, :tooltip => @convict.destination } %>
+    <% end %>
+  </div>
 </div>
