--- a/app/views/convicts/show.html.erb
+++ b/app/views/convicts/show.html.erb
@@ -1,6 +1,16 @@
 <% content_for :head do %>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
   <link rel="canonical" href="/convicts/<%= @convict.id %>/<%= @convict.name.parameterize %>" />
+
+  <!-- IE7 Hack to correctly align maps -->
+  <!--[if IE 7]>
+  <style type="text/css">
+    #show-convict-maps {
+      top: 0;
+    }
+  </style>
+  <![endif]-->
+
 <% end %>
 
 <% content_for :title do %>
